[tool.poetry]
name = "videogen"
version = "0.1.0"
description = ""
authors = ["asaunde78 <asaunde78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
minio = "^7.2.16"
dotenv = "^0.9.9"
moviepy = "^2.2.1"
requests = "^2.32.4"
pytz = "^2025.2"
google-api-python-client = "^2.176.0"
http-client = "^0.1.22"
httplib2 = "^0.22.0"
oauth2client = "^4.1.3"
argparse = "^1.4.0"
ffmpeg-python = "^0.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
